additional styling on register, login, landing page, nav, calendar view.  Primarily adding Grid and alignment.  Changing buttons/inputs to material ui.  Added background images.  Updating mealtree logo.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,6 +14,16 @@ img {
   max-width: 100%;
 }
 
+.standardBackground {
+  background-image: url('../../images/standardBackground.jpeg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100vh;
+  /* width: 100vw; */
+}
+
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
