--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,12 +16,22 @@ img {
 
 .standardBackground {
   background-image: url('../../images/standardBackground.jpeg');
-  background-position: center;
+  background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
-  /* width: 100vw; */
+  min-height: 100%;
+}
+
+@media only screen and (min-width: 500px) {
+  .standardBackground {
+    background-image: url('../../images/standardBackground.jpeg');
+    background-position: bottom;
+    background-size: auto;
+    background-repeat: repeat;
+    background-attachment: fixed;
+    min-height: 100%;
+  }
 }
 
 /* --------------------------------------------------------------------------------
