--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,11 +26,11 @@ img {
 @media only screen and (min-width: 500px) {
   .standardBackground {
     background-image: url('../../images/standardBackground.jpeg');
-    background-position: bottom;
-    background-size: auto;
-    background-repeat: repeat;
+    background-color: #e9e6e6;
+    background-position: center;
+    background-size: auto 1000px;  
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    min-height: 100%;
   }
 }
 
