--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -117,11 +117,12 @@ Form Treatment
 
 .formPanel {
   box-sizing: border-box;
+  color: white;
   width: 400px;
   max-width: 100%;
   padding: 25px;
   margin: 0 auto 20px;
-  background-color: #efefef;
+  background-color: #373936;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
 }
