--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,6 +21,8 @@ img {
   background-repeat: no-repeat;
   background-attachment: fixed;
   min-height: 100%;
+  padding-bottom: 65px;
+  padding-top: 10px;
 }
 
 @media only screen and (min-width: 500px) {
