--- a/src/components/RecipeView/RecipeView.css
+++ b/src/components/RecipeView/RecipeView.css
@@ -1,11 +1,11 @@
-.formNew {
+.form {
     box-sizing: border-box;
-    color: white;
+    color: rgb(0, 0, 0);
     width: 400px;
     max-width: 100%;
     padding: 25px;
     margin: 0 auto 20px;
-    background-color: #373936;
+    background-color: #b6bdb6;
     border-radius: 3px;
     box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
   }
